2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * Source/STTranscript.h (-window):
    * Source/NSApplication+additions.h (-applicationNameForScripting):
    Declare public methods.
    * Source/NSApplication+additions.m (-applicationNameForScripting):
    Fix typo in method name.

    * Source/NSApplication+additions.m (-_createDefaultScriptingEnvironment):
    Fix to no longer use methods which were removed when adding STConversation.

    * Source/STApplicationScriptingController.m (-executeScript:,
    -executeScriptString:inEnvironment:): Update for changes when
    STLanguage was removed and STContext was introduced.

    * Source/STApplicationScriptingController.h (-executeScript:):
    * Source/STApplicationScriptingController.m (-executeScript:): The
    method expects an STFileScript.

    * Source/STScriptsPanel.h (-selectedScript):
    * Source/STScriptsPanel.m (-run, -selectScript, -browse, -selectedScript):
    Method seletecedScript returns a STFileScript.

2003 May 2  Stefan Urbanek <urbanek@host.sk>

    * Added 'Objects' searching in application.
    * Added ScriptingInfo.plist template
    * GNUmakefile: removed inclusion of source-distribution.make
    
2003 May 1  Stefan Urbanek <urbanek@host.sk>

    * Support: updated files to use #include instead of #import

2003 Apr 04  David Ayers  <d.ayers@inode.at>

    * GNUmakefile: Added flags to be able to compile from the building
    directories and show all warnings except for import.
    * NSApplication+additions.h: Added missing declaration.
    * NSApplication+additions.m: Added import of needed headers.  Removed
    and commented unused variables to supress compiler warnings.
    Corrected variable types and added necessary casts.
    * NSObject+NibLoading.m: Added missing import.
    * NSTextView+ScriptExecution.m: Removed unused variables.
    * STAppScriptingSupport.m: Added missing import.
    * STApplicationScriptingController.m: Ditto.
    * STEnvironment+additions.m: Ditto.